--- a/part0/0.6.md
+++ b/part0/0.6.md
@@ -1,1 +1,35 @@
+```mermaid
+sequenceDiagram
+    participant browser
+    participant server
 
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
+    activate server
+    server-->>browser: HTTP status code 200
+    deactivate server
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
+    activate server
+    server-->>browser: the css file
+    deactivate server
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
+    activate server
+    server-->>browser: the JavaScript file
+    deactivate server
+
+    Note right of browser: The browser starts executing the JavaScript code that fetches the JSON from the server
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+    activate server
+    server-->>browser: the raw data of the notes (data.json).
+    deactivate server
+
+    Note right of browser: The new note added has a separate JSON request
+
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
+    activate server
+    server-->>browser: the new note created STATUS CODE: 201 Created
+    deactivate server
+
+```
